Worked on techs + add abstract

--- a/report/notation.tex
+++ b/report/notation.tex
@@ -4,4 +4,4 @@ distance $\delta(v,\lambda)$ for a $v\in V$ and $\lambda\in L$ is the distance b
 the node $v$ and the nearest $\lambda$-labeled node. Likewise, we use $\delta(u,v)$ to denote
 the minimal distance between two nodes $u,v\in V$. \\
 We use $Q(v,\lambda)$ or $Q(u,v)$ to denote the queries "What is $\delta(v,\lambda)$?" or
-"What is $\delta(u,v)$?" respectively.
+"What is $\delta(u,v)$?" respectively. \\
