--- a/report/report.bib
+++ b/report/report.bib
@@ -152,3 +152,23 @@
   year={1979},
   publisher={SIAM}
 }
+
+@inproceedings{tarjan2005self,
+  title={Self-adjusting top trees},
+  author={Tarjan, Robert E and Werneck, Renato F},
+  booktitle={Proceedings of the sixteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={813--822},
+  year={2005},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@article{henzinger1999randomized,
+  title={Randomized fully dynamic graph algorithms with polylogarithmic time per operation},
+  author={Henzinger, Monika R and King, Valerie},
+  journal={Journal of the ACM (JACM)},
+  volume={46},
+  number={4},
+  pages={502--516},
+  year={1999},
+  publisher={ACM}
+}
