Kleins + some FR-djikstra

--- a/report/report.bib
+++ b/report/report.bib
@@ -172,3 +172,23 @@
   year={1999},
   publisher={ACM}
 }
+
+@article{klein2010shortest,
+  title={Shortest paths in directed planar graphs with negative lengths: A linear-space O (n log 2 n)-time algorithm},
+  author={Klein, Philip N and Mozes, Shay and Weimann, Oren},
+  journal={ACM Transactions on Algorithms (TALG)},
+  volume={6},
+  number={2},
+  pages={30},
+  year={2010},
+  publisher={ACM}
+}
+
+@inproceedings{djidjev1996efficient,
+  title={Efficient algorithms for shortest path queries in planar digraphs},
+  author={Djidjev, Hristo N},
+  booktitle={International Workshop on Graph-Theoretic Concepts in Computer Science},
+  pages={151--165},
+  year={1996},
+  organization={Springer}
+}
