Start of survey

--- a/report/report.bib
+++ b/report/report.bib
@@ -192,3 +192,39 @@
   year={1996},
   organization={Springer}
 }
+
+@inproceedings{chen2000shortest,
+  title={Shortest path queries in planar graphs},
+  author={Chen, Danny Z and Xu, Jinhui},
+  booktitle={Proceedings of the thirty-second annual ACM symposium on Theory of computing},
+  pages={469--478},
+  year={2000},
+  organization={ACM}
+}
+
+@inproceedings{cabello2006many,
+  title={Many distances in planar graphs},
+  author={Cabello, Sergio},
+  booktitle={Proceedings of the seventeenth annual ACM-SIAM symposium on Discrete algorithm},
+  pages={1213--1220},
+  year={2006},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{mozes2012exact,
+  title={Exact distance oracles for planar graphs},
+  author={Mozes, Shay and Sommer, Christian},
+  booktitle={Proceedings of the twenty-third annual ACM-SIAM symposium on Discrete Algorithms},
+  pages={209--222},
+  year={2012},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{nussbaum2011improved,
+  title={Improved distance queries in planar graphs},
+  author={Nussbaum, Yahav},
+  booktitle={Workshop on Algorithms and Data Structures},
+  pages={642--653},
+  year={2011},
+  organization={Springer}
+}
