--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -3,7 +3,7 @@
   \\
   \begin{itemize}
     \item Expand introduction (introduce problem)
-    \item Write about techniques (monge / dense distance)
+    \item Techniques done for now
     \item Finish survey
       \begin{itemize}
         \item General case with fig of sota results
@@ -14,7 +14,7 @@
       \begin{itemize}
         \item Give $O(n^{1.5})$ space, $\text{poly}(\lg n)$ oracle (almost).
         \item Is it necessary to use klein/ddg for preprocessing in r-div?
-        \item Other results? (FR-djikstra, dynamic versions)
+        \item Other results? (FR-djikstra, dynamic version)
       \end{itemize}
     \item Concluding remarks and future works
     \item Appendices
