Survey partly done - missing dynamic

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -3,12 +3,13 @@
   \\
   \begin{itemize}
     \item Expand introduction (introduce problem)
-    \item Techniques done for now
+    \item Techniques
+      \begin{itemize}
+        \item Additively weighted Voronoi diagrams
+      \end{itemize}
     \item Finish survey
       \begin{itemize}
-        \item General case with fig of sota results
-        \item Planar case with fig of results
-        \item approximate results?
+        \item Planar case (dynamic)
       \end{itemize}
     \item Results
       \begin{itemize}
