--- a/report/exactPlanar.tex
+++ b/report/exactPlanar.tex
@@ -75,7 +75,7 @@ yield space:
 \end{align*}
 TODO: Not really worth it with recursion?
 
-\subsection{A distance oracle with better query times}
+\subsection{A distance oracle with better query times}\label{oracle2}
 We now present a distance oracle which is actually multiple data structures that perform
 well depending on $\ell$ and the number of each $\lambda\in L$. We will refer to the
 number of a given label by saying the \textit{size} of that label. Under the assumption
@@ -139,3 +139,10 @@ This gives us the distance oracle given in Theorem \ref{thm2}. \\
 \\
 TODO: Fix the gap ($\omega(\sqrt{n})$ labels with $\omega(\text{polylog}(n))$ size).
 
+TODO:
+\begin{itemize}
+  \item Recursive decomposition using Jordan curves.
+  \item Voronoi diagrams
+  \item Distances stored
+  \item Point location approach
+\end{itemize}
