--- a/report/report.bib
+++ b/report/report.bib
@@ -228,3 +228,19 @@
   year={2011},
   organization={Springer}
 }
+
+@phdthesis{wulff2010algorithms,
+  title={Algorithms for planar graphs and graphs in metric spaces},
+  author={Wulff-Nilsen, Christian},
+  year={2010},
+  school={PhD thesis, University of Copenhagen}
+}
+
+@inproceedings{gawrychowski2018voronoi,
+  title={Voronoi diagrams on planar graphs, and computing the diameter in deterministic O (n 5/3) time},
+  author={Gawrychowski, Pawel and Kaplan, Haim and Mozes, Shay and Sharir, Micha and Weimann, Oren},
+  booktitle={Proceedings of the Twenty-Ninth Annual ACM-SIAM Symposium on Discrete Algorithms},
+  pages={495--514},
+  year={2018},
+  organization={SIAM}
+}
