--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -126,3 +126,6 @@ $T$ in time linear to number of vertices in $G'$ which is significantly lower th
 number of vertices in $G$. Specifically, the graph is divided into bipartite graph that
 all comply with the Monge property and then invoke a Djikstra-like algorithm that run in
 time proportional to the number of vertices in $G'$.
+
+\subsection{Additively weighted Voronoi diagrams}
+blabla
