--- a/report/survey.tex
+++ b/report/survey.tex
@@ -29,59 +29,18 @@ $\tilde{O}(n^{1/k})$ time with stretch $(4k-5)$ and space $\tilde{O}(n^{1+1/k})$
 query time $O(k)$ and can be constructed in $O(kmn^{1/k})$.
 \end{thm}
 \noindent
-However, the focus of this thesis is on exact distance oracles and the approaches used to
-approximate distances are often not applicable to obtain exact distance oracles. Below, we outline results for exact distance oracles for both graphs that are labeled and
-graphs that are not labeled.
+However, the focus of this thesis is on exact distance oracles in planar graphs and the approaches used to
+approximate distances are often not applicable to obtain exact distance oracles.
+Furthermore, very little is known about exact vertex-labeled distance oracles -
+especially in planar graphs. A summary of distance oracles for vertex-labeled graphs in static planar graphs is given in Table
+\ref{vertexresults}. Note that the work in the field is very limited and all known
+results approximate distances. Below, we outline results for exact distance oracles for planar graphs that are not labeled.
 
-\subsection{The general case}
-
-
-\subsection{The planar case}\label{surveyplanar}
-%Given a directed planar graph $G$ with both positive and negative weighted edges, Klein
-%et al. \cite{klein2010shortest} gives an algorithm with $O(n\lg^2 n)$ preprocessing and
-%$O(n)$ space that can answer shortest paths.
-Djidjev \cite{djidjev1996efficient} worked towards an algorithm which had a space-query
-product beat those of SSSP and APSP problems. He showed that, given a desired space
-allocation $S\in [n, n^2]$, the distance oracle has $O(S)$ space and $O(n^2/S)$
-query time. These results are for any class of graphs where the separator theorem holds. For planar graphs
-with $S\in [n^{4/3}, n^{3/2}]$, he gives a distance oracle with query time $O(n\lg
-  n/\sqrt{S})$. \\
-  This trade-off, $\Theta(n/\sqrt{S})$, was later improved to work over the entire range
-  of $S\in [n,n^2]$ in the subsequent papers by Chen and Xu \cite{chen2000shortest},
-  Fakcharoenphol and Rao \cite{fakcharoenphol2006planar} and Cabello
-  \cite{cabello2006many}.  Mozes and Sommer \cite{mozes2012exact} obtained the same
-  result, but with an improvement for $S\in [n, n\lg \lg n$ and for any constant
-    $\varepsilon > 0$. They manage to produce a distance oracle with preprocessing time
-    $O(n\lg n)$, space $O(S)$ and a query time of $O(n^{1/2+\varepsilon})$. This result
-    was simultaneously found by Nussbaum \cite{nussbaum2011improved}.
-
-
-\subsection{Distance oracle in a planar graph with $O(n^{3/2})$ space and $O(\lg n)$ query
-time.}\label{cohenplanar}
-Cohen-Addad et al. \cite{cohen2017fast} introduced a (non vertex-labeled) distance
-oracle in planar digraphs that required subquadratic space and could answer exact distance queries in
-$O(\lg n)$ time. This was the first result to achieve polylogarithmic query time, as previous
-results required query time polynomial in $n$ or could only return approximate distances.
-This result was later improved in \cite{gawrychowski2017better} from using $O(n^{5/3})$
-space to $O(n^{3/2})$ space. They also improved the tradeoff for any space $S\in [n,n^2]$.
-That is, for $S\in [n, n^{3/2}]$, they give an oracle with query time
-$\tilde{O}(n^{3/2}/S)$. For $S\in [n^{3/2}, n^2]$, they give an oracle with query time
-$O(\lg n)$. \\
-\\
-TODO:
-\begin{itemize}
-  \item Recursive decomposition using Jordan curves.
-  \item Voronoi diagrams
-  \item Distances stored
-  \item Point location approach
-\end{itemize}
-We give two exact vertex-labeled distance oracles for planar graphs in \ref{exactPlanar}.
-
-\begin{table}[H]
+\begin{table}[h!]
   \footnotesize
   \centering
   \begin{tabular}{c | c | c | c | c}
-    Reference & Dir. & Preprocessing & Space & Query \\
+    Reference & Info & Preprocessing & Space & Query \\
     \hline\hline
     This & D & $O(n^2/\ell{1/3})$ & $O(n\ell^{2/3})$ & $O(\ell^{1/3})$ \\
     \hline
@@ -102,5 +61,96 @@ We give two exact vertex-labeled distance oracles for planar graphs in \ref{exac
 $(1+\varepsilon)$ stretch results. The letters 'U' and 'D' is for undirected and directed
 graphs respectively. The 'N' is the maximum arc length and $\Delta$ is the hop-diameter
 of the graph.}
+  \label{vertexresults}
+\end{table}
+
+\subsection{The static planar case}\label{surveyplanar}
+Djidjev \cite{djidjev1996efficient} worked towards an algorithm which had a space-query
+product beat those of SSSP and APSP problems. He showed that, given a desired space
+allocation $S\in [n, n^2]$, the distance oracle has $O(S)$ space and $O(n^2/S)$
+query time. These results are for any class of graphs where the separator theorem holds. For planar graphs
+with $S\in [n^{4/3}, n^{3/2}]$, he gives a distance oracle with query time $O(n\lg
+n/\sqrt{S})$. \\
+This trade-off, $\tilde{O}(n/\sqrt{S})$, was later improved to work over the entire range
+of $S\in [n,n^2]$ in the subsequent papers by Chen and Xu \cite{chen2000shortest},
+Fakcharoenphol and Rao \cite{fakcharoenphol2006planar} and Cabello
+\cite{cabello2006many}. Mozes and Sommer \cite{mozes2012exact} gave a distance oracle
+with this trade-off for $S\in [n, n^{4/3}]$ completing it for the entire range of $S$. Another result is for
+linear space and for any constant $\varepsilon > 0$, where they manage to produce a distance oracle with preprocessing time
+$O(n\lg n)$ and a $O(n^{1/2+\varepsilon})$ query time (This result
+was simultaneously found by Nussbaum \cite{nussbaum2011improved}). \\
+\\
+For constant query times, the best known result is by Wulff-Nilsen
+\cite{wulff2010algorithms} who gives a slightly subquadratic result of
+$O(n^2\text{polyloglog}(n)/\lg n)$ space. \\
+\\
+Cohen-Addad et al. \cite{cohen2017fast} introduced a distance
+oracle in planar digraphs that required subquadratic space, $O(n^{5/3})$, and could answer exact distance queries in
+$O(\lg n)$ time. This was the first result to achieve polylogarithmic query time, as previous
+results required query time polynomial in $n$ or could only return approximate distances.
+They also managed to improve the trade-off for $S\geq n^{3/2}$, where they get query
+times of $\tilde{O}(n^{5/2}/S^{3/2})$. \\
+\\
+This result was later improved in \cite{gawrychowski2017better} from using $O(n^{5/3})$
+space to $O(n^{3/2})$ space. They also improved the tradeoff for any space $S\in [n,n^2]$.
+That is, for $S\in [n, n^{3/2}]$, they give an oracle with query time
+$\tilde{O}(n^{3/2}/S)$. For $S\in [n^{3/2}, n^2]$, they give an oracle with query time
+$O(\lg n)$. The approach is a point location structure for additively weighted Voronoi
+diagrams. They get a recursive construction using Jordan curves as separator and store a
+Voronoi diagram for each node $u$ in the graph. The sites correspond to the boundary
+vertices and weights are the distances from $u$ to each site. For a query $Q(u,v)$, they
+locate a node $v$ in the Voronoi diagram for $u$, from which they can obtain the
+distance. Our result in Section \ref{oracle2} applies the techniques used in the work to
+get efficient query times for distance oracles in vertex-labeled graphs. \\
+\\
+A summary of preprocessing, space and query times for distance oracles in planar graphs is given in Table \ref{planarresults}.
+
+\begin{table}[h!]
+  \footnotesize
+  \centering
+  \begin{tabular}{c | c | c | c}
+    Reference & Space & Query & Preprocessing \\
+    \hline\hline
+    Djidjev \cite{djidjev1996efficient} & $S\in [n^{3/2}, n^2]$ & $O(n^2/S)$ & $O(S)$ \\
+    \hline
+    Djidjev \cite{djidjev1996efficient} & $S\in [n, n^{3/2}]$ & $O(n^2/S)$ & $O(n\sqrt{S})$ \\
+    \hline
+    Djidjev \cite{djidjev1996efficient} & $S\in [n^{4/3}, n^{3/2}]$ &
+    $\tilde{O}(n/\sqrt{S})$ & $O(n\sqrt{S})$ \\
+    \hline
+    Chen and Xu \cite{chen2000shortest} & $S\in [n^{4/3}, n^2]$ & $\tilde{O}(n/\sqrt{S})$
+    & $O(n\sqrt{S})$ \\
+    \hline
+    Cabello \cite{cabello2006many} & $S\in [n^{4/3}, n^2]$ & $\tilde{O}(n/\sqrt{S})$ &
+    $O(S)$ \\
+    \hline
+    FR-djikstra \& Klein's algorithm \cite{klein2005multiple}\cite{fakcharoenphol2006planar}& $S = O(n\lg n)$ &
+    $O(\sqrt{n}\lg^2 n)$ & $O(n\lg^2 n)$ \\
+    \hline
+    Mozes and Sommer \cite{mozes2012exact} & $S\in [n, n^{4/3}]$ &
+    $\tilde{O}(n/\sqrt{S})$ & $\tilde{O}(S)$ \\
+    \hline
+    Mozes and Sommer \cite{mozes2012exact} & $S=O(n)$ & $O(n^{1/2+\varepsilon}$ & $O(n\lg
+    n)$ \\
+    \hline
+    Cohen-Added et al. \cite{cohen2017fast} & $S\in [n^{3/2}, n^2]$ &
+    $O(n^{5/2}/S^{3/2}\lg n)$ & $\tilde{O}(S)$* \\
+    \hline
+    Cohen-Added et al. \cite{cohen2017fast} & $S=O(n^{5/3})$ & $O(\lg n)$ &
+    $\tilde{O}(n^{5/3})$* \\
+    \hline
+    Gawrychowski et al. \cite{gawrychowski2017better} & $S\in [n, n^2]$ &
+    $\tilde{O}(\max\{1, n^{3/2}/S\})$ & ---\\
+    \hline
+    Gawrychowski et al. \cite{gawrychowski2017better} & $S=O(n^{3/2})$ & $O(\lg n)$ & --- \\
+    \hline
+  \end{tabular}
+  \caption{Results for distance oracles in directed planar graphs that are not
+    vertex-labeled. All results are exact. \\
+    * Using Gawrychowski et al. \cite{gawrychowski2018voronoi} to speed up
+  preprocessing.}
   \label{planarresults}
 \end{table}
+
+\subsection{The dynamic planar case}
+TODO
