--- a/report/survey.tex
+++ b/report/survey.tex
@@ -124,7 +124,7 @@ A summary of preprocessing, space and query times for distance oracles in planar
     Cabello \cite{cabello2006many} & $S\in [n^{4/3}, n^2]$ & $\tilde{O}(n/\sqrt{S})$ &
     $O(S)$ \\
     \hline
-    FR-djikstra \& Klein's algorithm \cite{klein2005multiple}\cite{fakcharoenphol2006planar}& $S = O(n\lg n)$ &
+    FR-djikstra \& Klein \cite{klein2005multiple}\cite{fakcharoenphol2006planar}& $S = O(n\lg n)$ &
     $O(\sqrt{n}\lg^2 n)$ & $O(n\lg^2 n)$ \\
     \hline
     Mozes and Sommer \cite{mozes2012exact} & $S\in [n, n^{4/3}]$ &
